# DBoW2

./: .gitignore  CMakeLists.txt  Installation.md  experiment.sh  make_vocab.sh
bash_scripts/: build_big_gluestick_voc.sh  build_gluestick_voc.sh  build_voc_docker.sh  deploy_crunch.sh  test_sp_voc_creation_time.sh
demo/: ir_debug.cpp  ir_demo.cpp  ir_demo2.cpp  ir_demo_debug.cpp
example_images/: get_desc_path.sh
include/DBoW2/: DBoW2.h  FIR.h  FIR2.h  TemplatedVocabulary.h  read_ir.h
notebooks/: gluestick_day_night_batch_demo.ipynb  gluestick_day_night_demo.ipynb  gluestick_demo.ipynb  ir_database_demo.ipynb  ir_day_night_demo.ipynb
notebooks/util/: geometric_verification.py
scripts/: build_ir_voc.cpp  build_voc.py  build_voc_time_complexity_exp.py  convert_voc.cpp  ir_db_experiment.cpp  ir_timing_exp.cpp  simple_ir_test.cpp  simple_timing_exp.py  test_ir_temporal_gap_voc.cpp  test_ir_voc.cpp
src/: FIR.cpp  FIR2.cpp  read_ir.cpp
